# contemporary-rs

./: .gitignore  .gitmodules  .parlance.json  .parlance.yaml  Cargo.toml  publish-all.sh
cntp_config/: Cargo.toml
cntp_config/src/: config.rs  lib.rs
cntp_macros/: Cargo.toml
cntp_macros/src/: lib.rs
contemporary/: Cargo.toml  build.rs  i18n.toml
contemporary/src/: about_surface.rs  application.rs  assets.rs  button.rs  components.rs  constrainer.rs  easing.rs  grandstand.rs  hsv.rs  icon_tool.rs  jobs.rs  layer.rs  lerp.rs  lib.rs  macros.rs  notification.rs  pager.rs  permissions.rs  platform_support.rs  self_update.rs  setup.rs  setup_parlance.rs  styling.rs  subtitle.rs  surface.rs  tokio.rs  tracing.rs  transition.rs  window.rs
contemporary/src/about_surface/: self_update_status.rs
contemporary/src/assets/: global_manager.rs  icon_theme_asset_source.rs  manager.rs  window_controls_asset_source.rs
contemporary/src/components/: admonition.rs  anchorer.rs  application_menu.rs  button.rs  checkbox.rs  constrainer.rs  context_menu.rs  dialog_box.rs  error_flasher.rs  flyout.rs  focus_decoration.rs  grandstand.rs  icon.rs  icon_text.rs  interstitial.rs  layer.rs  pager.rs  popover.rs  progress_bar.rs  raised.rs  scrim.rs  scroll_area.rs  scrollbar.rs  skeleton.rs  slider.rs  spinner.rs  subtitle.rs  switch.rs  text_field.rs  toast.rs  tooltip.rs
contemporary/src/components/application_menu/: update_notification.rs
contemporary/src/components/base/: text_input.rs
contemporary/src/components/context_menu/: context_menu_popup.rs
contemporary/src/components/pager/: fade_animation.rs  lift_animation.rs  pager_animation.rs  slide_horizontal_animation.rs
contemporary/src/jobs/: job.rs  job_button.rs  job_manager.rs  jobs_menu.rs  standard_job.rs
contemporary/src/platform_support/: cx_platform_extensions.rs  linux.rs  macos.rs  platform_settings.rs  windows.rs
contemporary/src/platform_support/linux/: cx_platform_linux_extensions.rs  desktop_environment.rs  kde.rs  notification.rs  platform_settings.rs  setup.rs  setup_xdg_portal_interface_theme_changed_listener.rs  theme.rs  xdg_portal_interface_theme_changed_listener.rs
contemporary/src/platform_support/macos/: apple_interface_theme_changed_listener.rs  apple_workspace_a11y_options_changed_listener.rs  cx_platform_mac_extensions.rs  notification.rs  permissions.rs  platform_settings.rs  setup.rs  theme.rs
contemporary/src/platform_support/windows/: platform_settings.rs  setup.rs  setup_windows_color_values_changed_listener.rs  theme.rs
contemporary/src/self_update/: appimage.rs  bin_chicken_client.rs  macos.rs  win.rs
contemporary/src/self_update/macos/: restart.sh
contemporary/src/self_update/win/: restart.ps1
contemporary/src/styling/: contemporary.rs  macos.rs  rgb.rs  theme.rs  windows.rs
contemporary/src/tokio/: defer.rs  tokio_helper.rs
contemporary/src/tracing/: application_log.rs  application_log_entry.rs  layer.rs  visitor.rs
contemporary/src/transition/: float_transition_element.rs
contemporary/src/window/: raised_draw.rs  toast_drawer.rs  window_globals.rs
contemporary/translations/: de.json  en.json  he.json  hu.json  it.json  meta.json  ta-IN.json  vi.json
deploy_tool/cargo_cntp_bundle/: Cargo.toml
deploy_tool/cargo_cntp_bundle/src/: main.rs
deploy_tool/cargo_cntp_deploy/: Cargo.toml
deploy_tool/cargo_cntp_deploy/src/: main.rs
deploy_tool/cntp_bundle_lib/: Cargo.toml
deploy_tool/cntp_bundle_lib/src/: copy_dir_all.rs  icon.rs  lib.rs  linux.rs  macos.rs  tool_setup.rs  windows.rs
deploy_tool/cntp_bundle_lib/src/linux/: appimage.rs  apprun.sh  deploy.rs  flatpak.rs  rootdir.rs
deploy_tool/cntp_bundle_lib/src/macos/: alias.rs  bundle.rs  deploy.rs  ds_store.rs
deploy_tool/contemporary_bundle_lib/: Cargo.toml
deploy_tool/contemporary_bundle_lib/src/: icon.rs  lib.rs  linux.rs  macos.rs  tool_setup.rs  windows.rs
i18n/cargo_cntp_i18n/: Cargo.toml
i18n/cargo_cntp_i18n/src/: generate.rs  main.rs
i18n/cntp_i18n/: Cargo.toml  README.md
i18n/cntp_i18n/src/: hardcoded_i18n_source.rs  lib.rs  pseudotranslation.rs  test.rs
i18n/cntp_i18n_build_core/: Cargo.toml
i18n/cntp_i18n_build_core/src/: config.rs  lib.rs  load.rs
i18n/cntp_i18n_core/: Cargo.toml
i18n/cntp_i18n_core/src/: gpui.rs  lib.rs  load.rs  string.rs
i18n/cntp_i18n_gen/: Cargo.toml
i18n/cntp_i18n_gen/src/: lib.rs  tests.rs
i18n/cntp_i18n_macros/: Cargo.toml
i18n/cntp_i18n_macros/src/: config.rs  lib.rs  parse_raw_string.rs  preprocessor.rs  tr.rs  tr_load.rs  translation_file_cache.rs
i18n/cntp_i18n_parse/: Cargo.toml
i18n/cntp_i18n_parse/src/: lib.rs  parse_raw_string.rs  tr.rs  trf.rs  trn.rs
i18n/contemporary_i18n/: Cargo.toml
i18n/contemporary_i18n/src/: lib.rs
i18n/contemporary_i18n_core/: Cargo.toml
i18n/contemporary_i18n_core/src/: config.rs  lib.rs  load.rs  string.rs
i18n/contemporary_i18n_gen/: Cargo.toml
i18n/contemporary_i18n_gen/src/: lib.rs
i18n/contemporary_i18n_macros/: Cargo.toml
i18n/contemporary_i18n_macros/src/: config.rs  lib.rs  tr.rs  tr_load.rs
icon_tool/cntp_icon_tool_macros/: Cargo.toml
icon_tool/cntp_icon_tool_macros/src/: lib.rs
icon_tool/contemporary_icon_tool_macros/: Cargo.toml
icon_tool/contemporary_icon_tool_macros/src/: lib.rs
localesupport/cntp_localesupport/: Cargo.toml
localesupport/cntp_localesupport/cldr/: README.md
localesupport/cntp_localesupport/src/: cldr.rs  lib.rs  list_builder.rs  locale_formattable.rs  modifiers.rs
playground/: Cargo.toml  Contemporary.toml  build.rs
playground/src/: actions.rs  main.rs  main_surface.rs  main_window.rs  patterns.rs  surface_list.rs
playground/src/components/: admonitions.rs  buttons.rs  checkboxes_radio_buttons.rs  interstitials.rs  mod.rs  progress_bars.rs  ranges.rs  root.rs  scroll_areas.rs  skeletons.rs  text_input.rs
playground/src/patterns/: dialog_boxes.rs  directories.rs  flyouts.rs  i18n.rs  jobs.rs  notifications.rs  popovers.rs  root.rs  toasts.rs
playground/translations/: de.json  en.json  he.json  hu.json  it.json  meta.json  uk.json  vi.json
(+64 files in other folders)
