[workspace]
resolver = "3"
members = [
    "contemporary",
    "i18n/cargo_cntp_i18n",
    "i18n/contemporary_i18n",
    "i18n/contemporary_i18n_core",
    "i18n/contemporary_i18n_macros",
    "i18n/contemporary_i18n_parse",
    "i18n/contemporary_i18n_gen",
    "localesupport/contemporary_localesupport",
    "playground",
    "icon_tool/contemporary_icon_tool_core",
    "icon_tool/contemporary_icon_tool_macros",
    "contemporary_config",
]

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
locale_config = "*"
syn = "2"
once_cell = "1"
icu = "2"
anyhow = "1"
tracing = "0.1"
