[workspace]
resolver = "3"
members = [
    "contemporary",
    "i18n/cargo_cntp_i18n",
    "i18n/cntp_i18n",
    "i18n/cntp_i18n_core",
    "i18n/cntp_i18n_macros",
    "i18n/cntp_i18n_parse",
    "i18n/cntp_i18n_gen",
    "i18n/cntp_i18n_build_core",
    "localesupport/cntp_localesupport",
    "playground",
    "icon_tool/cntp_icon_tool_core",
    "icon_tool/cntp_icon_tool_macros",
    "cntp_config",
    "deploy_tool/cargo_cntp_bundle",
    "deploy_tool/cntp_bundle_lib",
    "deploy_tool/cargo_cntp_deploy",
    "cntp_macros",
]

[workspace.dependencies]
gpui = "*"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
locale_config = "*"
syn = "2"
once_cell = "1"
icu = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8.7.2", features = ["include-exclude"] }
clap-cargo = { version = "0.15", features = ["cargo_metadata"] }
rustc-hash = "2"
chrono = "0.4"
directories = "6"
smallvec = "1"
