[package]
name = "cntp_config"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["cntp"]
categories = ["data-structures"]
description = "Provides support for reading Contemporary.toml files"

[dependencies]
serde = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
serde_json = { workspace = true }
