[package]
name = "cntp_macros"
version = "0.1.0"
edition = "2024"
license = "GPL-3"
keywords = ["cntp", "gpui"]
categories = ["development-tools", "gui"]

[lib]
proc-macro = true

[dependencies]
cntp_config = { path = "../cntp_config" }
syn = { workspace = true }
quote = "1"
serde = { workspace = true }
serde_json = { workspace = true }
