[package]
name = "contemporary"
version = "0.1.0"
edition = "2024"

[dependencies]
contemporary_i18n = { path = "../i18n/contemporary_i18n" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
gpui = { workspace = true }
indexmap = { workspace = true }
url = "2"
unicode-segmentation = "1"

[target.'cfg(target_os="linux")'.dependencies]
freedesktop-icons = "0.4.0"

[build-dependencies]
contemporary_i18n_gen = { path = "../i18n/contemporary_i18n_gen" }
