[package]
name = "contemporary"
version = "0.1.0"
edition = "2024"

[dependencies]
contemporary_i18n = { path = "../i18n/contemporary_i18n", features = ["gpui"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
gpui = { workspace = true }
indexmap = { workspace = true }
url = "2"
unicode-segmentation = "1"
once_cell = { workspace = true }
rust-embed = "8.7.2"

[target.'cfg(target_os="linux")'.dependencies]
freedesktop-icons = "0.4.0"

[target.'cfg(target_os="macos")'.dependencies]
objc2-foundation = "0.3"

[build-dependencies]
contemporary_i18n_gen = { path = "../i18n/contemporary_i18n_gen" }
