[package]
name = "contemporary"
version = "0.1.0"
edition = "2024"

[dependencies]
cntp_i18n = { path = "../i18n/cntp_i18n", features = ["gpui"] }
cntp_macros = { path = "../cntp_macros" }
cntp_config = { path = "../cntp_config" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
gpui = { workspace = true }
indexmap = { workspace = true }
url = "2"
unicode-segmentation = "1"
once_cell = { workspace = true }
rust-embed = { workspace = true }
smol = "2"
async-channel = "2"

[target.'cfg(target_os="linux")'.dependencies]
freedesktop-icons = "0.4.0"
ashpd = { version = "0.11", features = ["async-std"], default-features = false }

[target.'cfg(target_os="macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"

[target.'cfg(target_os="windows")'.dependencies]
windows = "0.61"

[build-dependencies]
cntp_i18n_gen = { path = "../i18n/cntp_i18n_gen" }
