[package]
name = "playground"
version = "0.1.0"
edition = "2024"

[dependencies]
contemporary_i18n = { path = "../i18n/contemporary_i18n", features = ["gpui"] }
contemporary = { path = "../contemporary" }
gpui = { workspace = true }
indexmap = { workspace = true }
contemporary_icon_tool_macros = { path = "../icon_tool/contemporary_icon_tool_macros" }

[build-dependencies]
contemporary_i18n_gen = { path = "../i18n/contemporary_i18n_gen" }