[package]
name = "playground"
version = "0.1.0"
edition = "2024"
license = "GPL-3"
keywords = ["cntp", "gpui"]
categories = ["development-tools", "gui"]

[dependencies]
cntp_i18n = { path = "../i18n/cntp_i18n", features = ["gpui", "chrono"] }
contemporary = { path = "../contemporary" }
gpui = { workspace = true }
indexmap = { workspace = true }
cntp_icon_tool_macros = { path = "../icon_tool/cntp_icon_tool_macros" }
smol = "2"
smol-macros = "0.1"
chrono = { workspace = true }
tracing = { workspace = true }


[build-dependencies]
cntp_i18n_gen = { path = "../i18n/cntp_i18n_gen" }
