[package]
name = "cargo-cntp-bundle"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["cntp", "deployment"]
categories = ["command-line-utilities", "development-tools"]
description = "Cleanly bundles an application to be run on a target platform"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap-cargo = { workspace = true }
cntp_bundle_lib = { path = "../cntp_bundle_lib", version = "0.1.0" }
tracing = { workspace = true }
tracing-subscriber = "0.3"
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = [
    "tracing",
] }
current_platform = "0.2.0"
open = "5.3.2"
