[package]
name = "cargo-cntp-deploy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
contemporary_config = { path = "../../contemporary_config" }
contemporary_bundle_lib = { path = "../contemporary_bundle_lib" }
tracing = { workspace = true }
tracing-subscriber = "0.3"
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = ["tracing"] }
current_platform = "0.2.0"
open = "5.3.2"
