[package]
name = "cargo-cntp-deploy"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["cntp", "deployment"]
categories = ["command-line-utilities", "development-tools"]
description = "Creates a deployment package for bundled applications"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap-cargo = { workspace = true }
cntp_bundle_lib = { path = "../cntp_bundle_lib", version = "0.1.0" }
tracing = { workspace = true }
tracing-subscriber = "0.3"
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = [
    "tracing",
] }
open = "5.3.2"
