[package]
name = "cntp_bundle_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
cntp_config = { path = "../../cntp_config" }
cntp_icon_tool_core = { path = "../../icon_tool/cntp_icon_tool_core" }
plist = "1"
resvg = "0.45"
tempfile = "3.8"
cargo_metadata = "0.20.0"
current_platform = "0.2.0"
isahc = { version = "1", features = ["static-ssl"] }
anyhow = "1"
regex = "1"
image = "0.25"
tiff = "0.10.0"

[target.'cfg(target_os="windows")'.dependencies]
winres-edit = "=0.2.0"
