[package]
name = "cargo-cntp-i18n"
version = "0.1.0"
edition = "2024"

[dependencies]
syn = { workspace = true, features = ["visit", "parsing", "full"] }
clap = { version = "4", features = ["derive"] }
clap-cargo = { version = "0.15", features = ["cargo_metadata"] }
cargo_metadata = "0.20"
tracing = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = "0.3"
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = ["tracing"] }
contemporary_i18n_gen = { path = "../contemporary_i18n_gen" }
