[package]
name = "cargo-cntp-i18n"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["i18n", "cntp", "l10n", "translation"]
categories = ["internationalization", "localization", "value-formatting"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap-cargo = { workspace = true }
cargo_metadata = "0.20"
tracing = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = "0.3"
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = [
    "tracing",
] }
cntp_i18n_gen = { path = "../cntp_i18n_gen" }
