[package]
name = "cntp_i18n"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT"
keywords = ["i18n", "cntp", "l10n", "translation"]
categories = ["internationalization", "localization", "value-formatting"]
description = "Ergonomic i18n library"

[features]
gpui = ["cntp_i18n_core/gpui"]
chrono = ["cntp_localesupport/chrono"]

[dependencies]
cntp_i18n_core = { path = "../cntp_i18n_core", version = "0.1.0" }
cntp_i18n_macros = { path = "../cntp_i18n_macros", version = "0.1.0" }
cntp_localesupport = { path = "../../localesupport/cntp_localesupport", version = "0.1.0" }
once_cell = { workspace = true }
phf = { version = "0.12", features = ["macros"] }
rustc-hash = { workspace = true }
quick_cache = { version = "0.6" }
