[package]
name = "cntp_i18n_build_core"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["i18n", "cntp", "l10n", "translation"]
categories = ["internationalization", "localization", "value-formatting"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
