[package]
name = "cntp_i18n_macros"
version = "0.1.0"
edition = "2024"

[lib]
name = "cntp_i18n_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["extra-traits"]}
quote = "1"
once_cell = { workspace = true }
cntp_i18n_core = { path = "../cntp_i18n_core" }
cntp_i18n_parse = { path = "../cntp_i18n_parse" }
cntp_i18n_build_core = { path = "../cntp_i18n_build_core" }
proc-macro2 = "1"
rustc-hash = { workspace = true }
