[package]
name = "contemporary_i18n"
version = "0.1.0"
edition = "2024"

[features]
gpui = ["contemporary_i18n_core/gpui"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
contemporary_i18n_core = { path = "../contemporary_i18n_core" }
contemporary_i18n_macros = { path = "../contemporary_i18n_macros" }
icu = { workspace = true }
contemporary_localesupport = { path = "../../localesupport/contemporary_localesupport" }
fxhash = "0.2"
once_cell = { workspace = true }
phf = { version = "0.12", features = ["macros"] }
