[package]
name = "contemporary_i18n_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
icu = { workspace = true, features = ["compiled_data"] }
contemporary_localesupport = { path = "../../localesupport/contemporary_localesupport" }
toml = "0.8"
anyhow = "1"