[package]
name = "contemporary_icon_tool_macros"
version = "0.1.0"
edition = "2024"

[lib]
name = "contemporary_icon_tool_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
contemporary_icon_tool_core = { path = "../contemporary_icon_tool_core" }
contemporary_config = { path = "../../contemporary_config" }
syn = { workspace = true }
quote = "1"