[package]
name = "cntp_localesupport"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["i18n", "cntp", "l10n", "translation"]
categories = ["internationalization", "localization", "value-formatting"]

[features]
chrono = ["dep:chrono"]
default = ["chrono"]

[dependencies]
icu = { workspace = true, features = ["experimental"] }
locale_config = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
chrono = { workspace = true, optional = true }
